# gendiff

./: .coverage  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yaml
gendiff/: __init__.py  cli.py  file_reader.py  generate_diff.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: cli.py  gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: correct_json_flat_json_output.txt  correct_json_nested_json_output.txt
